# OptixPathTracer

./: .gitignore  CMakeLists.txt  README.md  modified_sampleConfig.h.in  optixir_CMakeLists.txt
04HelloRaytracing/: LaunchParams.h  Model.h  SampleRenderer.cpp  SampleRenderer.h  deviceProgram.cu  main.cpp
05HelloPathtracing/: CMakeLists.txt  OptixDenoiser.cpp  Probe.h  SimplePathtracer.cpp  SimplePathtracer.h  main.cpp  maths.h
05HelloPathtracing_V2/: CMakeLists.txt  LaunchParams.h  Model.cpp  SimplePathtracer.cpp  SimplePathtracer.h  deviceProgram.cu  main.cpp
CMake/: FindOptiX.cmake
HelloPathtracing/: CMakeLists.txt  Material.h  deviceProgram.cu  main.cpp
HelloPathtracing_V1/: Disney.cuh
HelloPathtracing_V2/: CMakeLists.txt  LaunchParams.h  SimplePathtracer.cpp  SimplePathtracer.h  deviceProgram.cu  main.cpp
HelloPathtracing_V3/: CMakeLists.txt  LaunchParams.h  SimplePathtracer.cpp  SimplePathtracer.h  deviceProgram.cu  main.cpp
HelloPathtracing_V4/: CMakeLists.txt  LaunchParams.h  SimplePathtracer.cpp  deviceProgram.cu  main.cpp  maths.h
HelloPathtracing_original/: CMakeLists.txt  LaunchParams.h  Model.h  deviceProgram.cu  main.cpp
HelloPathtracing_sv/: CMakeLists.txt  main.cpp  (+5 more)
HelloPathtracing_sv4_vmv23/: CMakeLists.txt  Disney.cuh  Filter.h  LaunchParams.h  OptixDenoiser.cpp  Probe.h  SimplePathtracer.cpp  SimplePathtracer.h  data.tsv  deviceProgram.cu  final_fps_data.xlsx  main.cpp  sample.h
Hidden/04HelloRaytracing/: CMakeLists.txt  CUDABuffer.h  Model.cpp
OptixUtils/: CMakeLists.txt  CUDATexture.h  Maths.h  Texture.cpp  Texture.h  Util.h
(+43 files in other folders)
